Improve consistency of top nav and back buttons

--- a/sass/base/_headings.scss
+++ b/sass/base/_headings.scss
@@ -11,7 +11,7 @@ h1 {
     @include leader(.25);
     @include trailer(.75);
 
-    strong {
+    strong, b {
         color: tint($hal-cyan, 50%);
     }
 }
