--- a/templates/admin/dashboard.twig
+++ b/templates/admin/dashboard.twig
@@ -64,28 +64,28 @@
         <h3>Server Information</h3>
         <div class="details-box">
             <dl class="split mbn">
-                <dt class="split__title"><strong>Hostname</strong></dt>
+                <dt class="split__title"><b>Hostname</b></dt>
                 <dd>
                     <div class="pre-wrapper">
                         <pre>{{ server_name }}</pre>
                     </div>
                 </dd>
 
-                <dt class="split__title"><strong>Encryption key</strong></dt>
+                <dt class="split__title"><b>Encryption key</b></dt>
                 <dd>
                     <div class="pre-wrapper">
                         <pre>{{ encryption_key }}</pre>
                     </div>
                 </dd>
 
-                <dt class="split__title"><strong>Session Encryption key</strong></dt>
+                <dt class="split__title"><b>Session Encryption key</b></dt>
                 <dd>
                     <div class="pre-wrapper">
                         <pre>{{ session_encryption_key }}</pre>
                     </div>
                 </dd>
 
-                <dt class="split__title"><strong>Hal Push File</strong></dt>
+                <dt class="split__title"><b>Hal Push File</b></dt>
                 <dd>
                     <div class="pre-wrapper">
                         {% if push_file %}
