--- a/templates/admin/super.global-message.twig
+++ b/templates/admin/super.global-message.twig
@@ -17,9 +17,9 @@
             <pre>{{ message}}</pre>
             <p>
                 {% if ttl %}
-                    This message will expire in <strong>{{ ttl }} seconds</strong>.</p>
+                    This message will expire in <b>{{ ttl }} seconds</b>.</p>
                 {% else %}
-                    This message will <strong>never</strong> expire.</p>
+                    This message will <b>never</b> expire.</p>
                 {% endif %}
             </p>
 
