--- a/templates/application/application.edit.twig
+++ b/templates/application/application.edit.twig
@@ -5,7 +5,7 @@
 {% set page_title = 'Edit Application : ' ~ application.name %}
 
 {% block content %}
-    <h1>Edit Application - <strong>{{ application.name }}</strong></h1>
+    <h1>Edit Application - <b>{{ application.name }}</b></h1>
 
     {{ form_macros.formErrors(errors) }}
 
