--- a/templates/credentials/credential.twig
+++ b/templates/credentials/credential.twig
@@ -11,19 +11,23 @@
         {{ macros.alert('error', 'Unable to decrypt value! Encryption may be misconfigured.') }}
     {% endif %}
 
-    <h1>Credentials - <strong>{{ credential.name }}</strong></h1>
+    <h1>Credentials - <b>{{ credential.name }}</b></h1>
 
-    <h3>Name</h3>
-    <p>{{ credential.name }}</p>
+    <div class="details-box">
+        <dl class="split mbn">
+            <dt class="split__title">Name</dt>
+            <dd>{{ credential.name }}</dd>
 
-    <h3>Type</h3>
-    <p>
-        {% if credential.type == 'aws' %}
-            AWS
-        {% elseif credential.type == 'privatekey' %}
-            Private Key
-        {% endif %}
-    </p>
+            <dt class="split__title">Type</dt>
+            <dd>
+                {% if credential.type == 'aws' %}
+                    AWS
+                {% elseif credential.type == 'privatekey' %}
+                    Private Key
+                {% endif %}
+            </dd>
+        </dl>
+    </div>
 
     {% if credential.type == 'aws' %}
 
