--- a/templates/permissions/permission.add.twig
+++ b/templates/permissions/permission.add.twig
@@ -8,7 +8,7 @@
 
     <h1>{{ page_title }}</h1>
 
-    <h2>Current Permissions - <strong>{{ user.handle }}</strong></h2>
+    <h2>Current Permissions - <b>{{ user.handle }}</b></h2>
     {% include 'user/partial.user-status.twig' %}
 
     <h2>Add Permissions</h2>
