--- a/templates/server/server.edit.twig
+++ b/templates/server/server.edit.twig
@@ -4,7 +4,7 @@
 {% set page_title = 'Edit Server : ' ~ server.name %}
 
 {% block content %}
-    <h1>Edit Server - <strong>{{ server.name }}</strong></h1>
+    <h1>Edit Server - <b>{{ server.name }}</b></h1>
 
     {{ form_macros.formErrors(errors) }}
 
