--- a/templates/target-view/pool.add.twig
+++ b/templates/target-view/pool.add.twig
@@ -4,7 +4,7 @@
 {% set page_title = 'Add Target Pool : ' ~ view.name %}
 
 {% block content %}
-    <h1>Add Target Pool - <strong>{{ view.name }}</strong> </h1>
+    <h1>Add Target Pool - <b>{{ view.name }}</b> </h1>
 
     <div class="details-box">
         <dl class="split mbn">
