--- a/templates/target-view/pool.edit.twig
+++ b/templates/target-view/pool.edit.twig
@@ -4,7 +4,7 @@
 {% set page_title = 'Edit Target Pool : ' ~ pool.name %}
 
 {% block content %}
-    <h1>Edit Target Pool - <strong>{{ pool.name }}</strong> </h1>
+    <h1>Edit Target Pool - <b>{{ pool.name }}</b> </h1>
 
     <div class="details-box">
         <dl class="split mbn">
