--- a/templates/target-view/view.add.twig
+++ b/templates/target-view/view.add.twig
@@ -4,7 +4,7 @@
 {% set page_title = 'Add Target View : ' ~ application.name %}
 
 {% block content %}
-    <h1>Add Target View - <strong>{{ application.name }}</strong> </h1>
+    <h1>Add Target View - <b>{{ application.name }}</b> </h1>
 
     <div class="details-box">
         <dl class="split mbn">
