--- a/templates/target-view/view.edit.twig
+++ b/templates/target-view/view.edit.twig
@@ -4,7 +4,7 @@
 {% set page_title = 'Edit Target View : ' ~ view.name %}
 
 {% block content %}
-    <h1>Edit Target View - <strong>{{ view.name }}</strong> </h1>
+    <h1>Edit Target View - <b>{{ view.name }}</b></h1>
 
     <div class="details-box">
         <dl class="split mbn">
