--- a/templates/user/settings.twig
+++ b/templates/user/settings.twig
@@ -29,12 +29,12 @@
 
         <label class="checkbox--switch">
             <input type="checkbox" name="seriousbusiness" value="1" {{ is_serious_business_mode ? ' checked' : '' }}>
-            <b class="checkbox--switch__pill"></b>Use <strong>Serious Business&trade;</strong> mode
+            <b class="checkbox--switch__pill"></b>Use <b>Serious Business&trade;</b> mode
         </label>
 
         <p>
             <small>
-                Flavor text such as <strong>Hello, Dave</strong> and <strong>I'm afraid I can't do that</strong> will be reduced across the application.
+                Flavor text such as <b>Hello, Dave</b> and <b>I'm afraid I can't do that</b> will be reduced across the application.
             </small>
         </p>
 
