--- a/templates/user/user.twig
+++ b/templates/user/user.twig
@@ -12,7 +12,7 @@
 {% block content %}
 
     <div class="nav--page">
-        <h1>User - <strong>{{ user.handle }}</strong></h1>
+        <h1>User - <b>{{ user.handle }}</b></h1>
 
         <p class="nav--page__back">
             <a class="btn btn--small btn--back" href="{{ uriFor('users.page1') }}">Back to Users</a>
