--- a/templates/application/application.twig
+++ b/templates/application/application.twig
@@ -8,22 +8,18 @@
 {% set canRemove = isAdmin and not has_deployments %}
 
 {% block content %}
-    <h1>Application - <strong>{{ application.name }}</strong></h1>
+    <div class="nav--page">
+        <h1>Application - <b>{{ application.name }}</b></h1>
+
+        <p class="nav--page__back">
+            <a class="btn btn--small btn--back" href="{{ uriFor('application.dashboard', {'application': application.id}) }}">Go to Application Dashboard</a>
+        </p>
+    </div>
 
     {{ block('meta') }}
 
-    <h2>Notifications</h2>
-    <div class="details-box">
-        <dl class="split mbn">
-            <dt class="split__title">Email</dt>
-            <dd>{{ application.email ?: 'None' }}</dd>
-        </dl>
-    </div>
-
     <ul class="button-list">
-        <li><a class="btn" href="{{ uriFor('application.dashboard', {'application': application.id}) }}">Application Status</a></li>
-
-        <li><a class="btn btn--secondary" href="{{ uriFor('encrypted.configuration', {'application': application.id}) }}">Encrypted Properties</a></li>
+        <li><a class="btn btn--secondary" href="{{ uriFor('encrypted.configuration', {'application': application.id}) }}">Encrypted Configuration</a></li>
         <li><a class="btn btn--secondary" href="{{ uriFor('targets', {'application': application.id}) }}">Deployment Targets</a></li>
     </ul>
 
@@ -44,11 +40,11 @@
 {% block meta %}
     <div class="details-box">
         <dl class="split">
-            <dt class="split__title">Name</dt>
-            <dd>{{ application.name }}</dd>
-
             <dt class="split__title">Identifier</dt>
             <dd>{{ application.key }}</dd>
+
+            <dt class="split__title">Name</dt>
+            <dd>{{ application.name }}</dd>
 
             <dt class="split__title">GitHub Source</dt>
             <dd>{{ macros.gitsource(application) }}</dd>
