--- a/templates/encrypted-configuration/encrypted.add.twig
+++ b/templates/encrypted-configuration/encrypted.add.twig
@@ -4,7 +4,7 @@
 {% set page_title = 'Add Encrypted Property' %}
 
 {% block content %}
-    <h1>{{ page_title }} - <strong>{{ application.name }}</strong></h1>
+    <h1>{{ page_title }} - <b>{{ application.name }}</b></h1>
 
     <div class="form-wrapper">
         {{ form_macros.formErrors(errors) }}
