--- a/templates/encrypted-configuration/encrypted.configuration.twig
+++ b/templates/encrypted-configuration/encrypted.configuration.twig
@@ -1,13 +1,24 @@
 {% extends 'base.twig' %}
 {% import "macros.twig" as macros %}
 
-{% set page_title = 'Encrypted Properties : ' ~ application.name %}
+{% set page_title = 'Encrypted Configuration : ' ~ application.name %}
 
 {% set isAdmin = isUserAdminOrSuper(current_user) %}
 {% set canEdit = isAdmin or isUserLeadOf(current_user, application) %}
 
 {% block content %}
-    <h1>Encrypted Properties - <strong>{{ application.name }}</strong></h1>
+    <div class="nav--page">
+        <h1>Encrypted Configuration - <b>{{ application.name }}</b></h1>
+
+        <p class="nav--page__back">
+            <a class="btn btn--small btn--back" href="{{ uriFor('application', {'application': application.id}) }}">Back to Application</a>
+        </p>
+    </div>
+
+    <p>
+        Encrypted configuration is used to inject secrets and sensitive information into your build process.
+        Hal encrypts secrets at rest. This is secure. Do not store secrets in your version control!
+    </p>
 
     {% if encrypteds %}
         <table class="table--spacing-medium table--striped" data-tablesaw-mode="stack">
@@ -51,25 +62,26 @@
             {% endfor %}
             </tbody>
         </table>
+
         <p>
-            Encrypted properties are immutable. To change the value of a property: Remove it then add it again.
+            Encrypted configuration is immutable. To change the value of a property: Remove it then add it again.
             Only administrators can view encrypted values. If you need to know a previously set property, contact an administrator.<br><br>
 
-            If a property is set for both <strong>Global</strong> and a specific environment, the environment-specific
-            property will override the <strong>Global</strong> property.
+            If a property is set for both <b>Global</b> and a specific environment, the environment-specific
+            property will override the <b>Global</b> property.
         </p>
         <p>
             When decrypted and set as environment variables -  properties will be uppercased and prefixed with <code>ENCRYPTED_</code> at runtime.
         </p>
     {% else %}
-        <p>There are no encrypted properties for this application.</p>
+        <p>There are no encrypted configuration for this application.</p>
+
     {% endif %}
 
-    <ul class="button-list button-list--half">
-        {% if canEdit %}
+    {% if canEdit %}
+        <ul class="button-list button-list--half">
             <li><a class="btn btn--action" href="{{ uriFor('encrypted.add', {'application': application.id}) }}">Add Encrypted Property</a></li>
-        {% endif %}
-        <li><a class="btn" href="{{ uriFor('application', {'application': application.id}) }}">Application</a></li>
-    </ul>
+        </ul>
+    {% endif %}
 
 {% endblock %}
