--- a/templates/encrypted-configuration/encrypted.twig
+++ b/templates/encrypted-configuration/encrypted.twig
@@ -1,7 +1,7 @@
 {% extends 'base.twig' %}
 {% import "macros.twig" as macros %}
 
-{% set page_title = 'Encrypted Properties : ' ~ application.name %}
+{% set page_title = 'Encrypted Configuration : ' ~ application.name %}
 
 {% block content %}
 
@@ -9,14 +9,18 @@
         {{ macros.alert('error', 'Unable to decrypt value! Encryption may be misconfigured.') }}
     {% endif %}
 
-    <h1>Encrypted Property - <strong>{{ application.name }}</strong></h1>
+    <div class="nav--page">
+        <h1>Encrypted Property - <b>{{ application.name }}</b></h1>
+
+        <p class="nav--page__back">
+            <a class="btn btn--small btn--back" href="{{ uriFor('application', {'application': application.id}) }}">Back to Application</a>
+        </p>
+    </div>
 
     <div class="details-box">
         <dl class="split mbn">
             <dt class="split__title">Application</dt>
-            <dd>
-                <a href="{{ uriFor('application', {'application': application.id}) }}">{{ application.name }}</a>
-            </dd>
+            <dd>{{ application.name }}</dd>
 
             <dt class="split__title">Environment</dt>
             <dd>
@@ -48,8 +52,8 @@
     </section>
 
     <ul class="button-list button-list--half">
-        <li><a class="btn" href="{{ uriFor('encrypted.configuration', {'application': application.id}) }}">View all encrypted properties</a></li>
-        <li><a class="btn btn--secondary" href="{{ uriFor('application', {'application': application.id}) }}">Applicaton</a></li>
+        <li><a class="btn" href="{{ uriFor('encrypted.configuration', {'application': application.id}) }}">View all encrypted configuration</a></li>
+        <li class="button-list__fixed"><a class="btn btn--destructive" href="{{ uriFor('encrypted.remove', {'application': application.id, 'encrypted': encrypted.id}) }}">Remove Property</a></li>
     </ul>
 
 {% endblock %}
