--- a/templates/environment/environment.edit.twig
+++ b/templates/environment/environment.edit.twig
@@ -4,7 +4,7 @@
 {% set page_title = 'Edit Environment : ' ~ env.name %}
 
 {% block content %}
-    <h1>Edit Environment - <strong>{{ env.name }}</strong></h1>
+    <h1>Edit Environment - <b>{{ env.name }}</b></h1>
 
     <div class="form-wrapper">
         {{ form_macros.formErrors(errors) }}
