--- a/templates/help/deployment.twig
+++ b/templates/help/deployment.twig
@@ -6,7 +6,7 @@
 {% block content %}
 
     <div class="nav--page">
-        <h1>Help - <strong>Deployment Scripting Guide</strong></h1>
+        <h1>Help - <b>Deployment Scripting Guide</b></h1>
 
         <p class="nav--page__back">
             <a class="btn btn--small btn--back" href="{{ uriFor('help') }}">Back to Help</a>
