--- a/templates/organization/organization.edit.twig
+++ b/templates/organization/organization.edit.twig
@@ -4,7 +4,7 @@
 {% set page_title = 'Edit Organization : ' ~ organization.name %}
 
 {% block content %}
-    <h1>Edit Organization - <strong>{{ organization.name }}</strong></h1>
+    <h1>Edit Organization - <b>{{ organization.name }}</b></h1>
 
     <div class="form-wrapper">
         {{ form_macros.formErrors(errors) }}
