--- a/templates/permissions/deployment.remove.twig
+++ b/templates/permissions/deployment.remove.twig
@@ -7,7 +7,7 @@
 
     <h1>{{ page_title }}</h1>
 
-    <h2>Current Permissions - <strong>{{ user.handle }}</strong></h2>
+    <h2>Current Permissions - <b>{{ user.handle }}</b></h2>
 
     {% include 'user/partial.user-status.twig' with {
         showHalStatus: false,
