--- a/templates/push/push.twig
+++ b/templates/push/push.twig
@@ -7,10 +7,10 @@
 {% block content %}
 
     <div class="nav--page">
-        <h1>Push - <strong>{{ push.application.name }}</strong></h1>
+        <h1>Push - <b>{{ push.application.name }}</b></h1>
 
         <p class="nav--page__back">
-            <a class="btn btn--small btn--back" href="{{ uriFor('application.dashboard', {'application': push.application.id}) }}">Back to Application Status</a>
+            <a class="btn btn--small btn--back" href="{{ uriFor('application.dashboard', {'application': push.application.id}) }}">Back to Application Dashboard</a>
         </p>
     </div>
 
