--- a/templates/push/start.twig
+++ b/templates/push/start.twig
@@ -8,10 +8,10 @@
 
 {% block content %}
     <div class="nav--page">
-        <h1>Start Push - <strong>{{ build.application.name }}</strong></h1>
+        <h1>Start Push - <b>{{ build.application.name }}</b></h1>
 
         <p class="nav--page__back">
-            <a class="btn btn--small btn--back" href="{{ uriFor('application.dashboard', {'application': build.application.id}) }}">Back to Application Status</a>
+            <a class="btn btn--small btn--back" href="{{ uriFor('application.dashboard', {'application': build.application.id}) }}">Back to Application Dashboard</a>
         </p>
     </div>
 
