--- a/templates/styleguide.html.twig
+++ b/templates/styleguide.html.twig
@@ -78,7 +78,7 @@
             <hr><h2>Headers</h2><hr>
             <section>
 
-                <h1>Header H1 <strong>details</strong></h1>
+                <h1>Header H1 <b>details</b></h1>
                 <p>For use as page headers</p><hr>
 
                 <h2>Header H2</h2>
