--- a/templates/server/server.twig
+++ b/templates/server/server.twig
@@ -88,7 +88,7 @@
                         {% endif %}
                     </td>
                     <td class="tr">
-                        <a class="btn btn--tiny" href="{{ uriFor('deployment', {'application': deployment.application.id, 'deployment': deployment.id}) }}">View</a>
+                        <a class="btn btn--tiny" href="{{ uriFor('target', {'application': deployment.application.id, 'target': deployment.id}) }}">View</a>
                     </td>
                 </tr>
             {% endfor %}
