--- a/templates/help/application-setup.twig
+++ b/templates/help/application-setup.twig
@@ -193,7 +193,7 @@
     <h6>Other references:</h6>
     <ul class="list--bare">
         <li class="mvn"><a href="http://docs.aws.amazon.com/elasticbeanstalk/latest/dg/GettingStarted.Walkthrough.html">Elastic Beanstalk Walkthrough</a></li>
-        <li class="mvn"><a href="http://docs.aws.amazon.com/elasticbeanstalk/latest/dg/ebextensions.html">Advanced environment customization (.bextensions)</a></li>
+        <li class="mvn"><a href="http://docs.aws.amazon.com/elasticbeanstalk/latest/dg/ebextensions.html">Advanced environment customization (.ebextensions)</a></li>
         <li class="mvn"><a href="http://docs.aws.amazon.com/elasticbeanstalk/latest/dg/environment-cfg-manifest.html">Environment manifest (env.yaml)</a></li>
     </ul>
 
