--- a/templates/application/applications.twig
+++ b/templates/application/applications.twig
@@ -1,7 +1,7 @@
 {% extends 'base.twig' %}
 {% import _self as page_macros %}
 {% import "macros.twig" as macros %}
-{% set js_components = ["favorites", "collapsible"] %}
+{% set js_components = ["favorites", "collapsible", "apps.filter"] %}
 
 {% set page_title = "Applications" %}
 
@@ -40,7 +40,9 @@
 
     <h2>Applications</h2>
 
-    <table class="table--spacing-medium js-collapsible" data-tablesaw-mode="stack">
+<input id="js-search-input" class="text-input" type="text" name="search" autocomplete="off" placeholder="Search for an application or repository..." maxlength="100">
+
+    <table class="table--spacing-medium js-collapsible js-search-table" data-tablesaw-mode="stack">
         <thead>
             <tr>
                 <th>Application</th>
@@ -49,35 +51,35 @@
             </tr>
         </thead>
 
-            {% set hasApplications = false %}
+        {% set hasApplications = false %}
 
-            {% for group_id, group_applications in applications %}
-                <tbody class="table-breathe">
-                    {% set group = groups[group_id] %}
-                    <tr>
-                        <th colspan="4" class="table-mid-header" id="org-{{ group_id}}">
-                            <a href="{{ uriFor('organization', {'organization': group.id}) }}">{{ group.name }}</a>
-                        </th>
-                    </tr>
-
-                    {% if group_applications %}
-                        {% set hasApplications = true %}
-                        {% for application in group_applications %}
-                            {{ page_macros.app_row(current_user, application, true) }}
-                        {% endfor %}
-                    {% else %}
-                        <tr>
-                            <td colspan="4">No applications found.</td>
-                        </tr>
-                    {% endif %}
-                </tbody>
-            {% endfor %}
-
-            {% if not hasApplications %}
+        {% for group_id, group_applications in applications %}
+            <tbody class="table-breathe js-search-group">
+                {% set group = groups[group_id] %}
                 <tr>
-                    <td colspan="4">There are no groups.</td>
+                    <th colspan="4" class="table-mid-header" id="org-{{ group_id}}">
+                        <a href="{{ uriFor('organization', {'organization': group.id}) }}">{{ group.name }}</a>
+                    </th>
                 </tr>
-            {% endif %}
+
+                {% if group_applications %}
+                    {% set hasApplications = true %}
+                    {% for application in group_applications %}
+                        {{ page_macros.app_row(current_user, application, true) }}
+                    {% endfor %}
+                {% else %}
+                    <tr>
+                        <td colspan="4">No applications found.</td>
+                    </tr>
+                {% endif %}
+            </tbody>
+        {% endfor %}
+
+        {% if not hasApplications %}
+            <tr>
+                <td colspan="4">There are no groups.</td>
+            </tr>
+        {% endif %}
     </table>
 
     <ul class="button-list button-list--half">
@@ -90,7 +92,7 @@
     {% import "macros.twig" as macros %}
 
     {% if allow_collapse %}
-        <tr class="js-collapsible-row">
+        <tr class="js-collapsible-row js-search-item">
     {% else %}
         <tr>
     {% endif %}
@@ -118,7 +120,11 @@
             {% endif %}
             <a href="{{ uriFor('application.dashboard', {'application': application.id}) }}">{{ application.name }}</a>
         </td>
-        <td>{{ macros.gitsource(application) }}</td>
+        <td>
+            {{ macros.gitsource(application) }}
+            <span class="js-search-query">{{ application.name }}</span>
+            <span class="js-search-query">{{ application.githubOwner ~ '/' ~ application.githubRepo }}</span>
+        </td>
         <td class="tr">
             <a href="{{ uriFor('application', {'application': application.id}) }}">Manage</a>
         </td>
