Update copy to allow EB environment name or ID

--- a/templates/help/application-setup.twig
+++ b/templates/help/application-setup.twig
@@ -201,7 +201,7 @@
         Once this process is finished you should have the following information:
         <b>EB Application</b>,
         <b>S3 bucket</b>,
-        <b>Environment ID</b>,
+        <b>Environment Name or ID</b>,
         and <b>AWS Access Token</b>.
 
         Contact the Key Masters at {{ kmContact|raw }} or Web Core at {{ wcContact|raw }} to request that the deployment information be added to Hal.
