--- a/templates/help/help.twig
+++ b/templates/help/help.twig
@@ -154,6 +154,9 @@
         <li>Script (Applications define their deployment process in scripts)</li>
         <li>R Sync (On-premise unix servers)</li>
     </ul>
+    <p>
+        Looking for help setting up these technologies? Check out the <a href="{{ urlFor('help.setup') }}">application setup guide</a>.
+    </p>
 
     <h3 id="docker-support">{{ macros.status_icon('Does Hal support Docker?') }}</h3>
     <p>All linux-based applications are built in isolated Docker containers.</p>
